tests/ui/coherence/coherence-cow.re_c.stderr
error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> $DIR/coherence-cow.rs:26:1
   |
LL | impl<T,U> Remote for Pair<Cover<T>,U> { }
   | ^^^^^^^^^^^^^^^^^^^^^----------------
   |                      |
   |                      `Pair` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
